# clash-verge-rev

./: Cargo.toml  Changelog.md  README.md
.github/workflows/: autobuild.yml  fork-release.yml  release.yml
crates/verge-cli/: Cargo.toml
crates/verge-cli/src/: ip_type.rs  local_proxy.rs  main.rs
crates/verge-cli/src/cli/: apply.rs  backup.rs  bench.rs  config_cmd.rs  delay.rs  expose.rs  generate.rs  match_cmd.rs  mod.rs  mode.rs  monitor.rs  proxy.rs  reload.rs  rollback.rs  rule.rs  status.rs  sub.rs
crates/verge-cli/src/config/: app_config.rs
crates/verge-cli/src/generator/: merge.rs  mod.rs  rule_provider.rs
crates/verge-cli/src/mihomo/: client.rs  types.rs
crates/verge-cli/src/model/: clash.rs
crates/verge-cli/src/subscription/: fetcher.rs  parser.rs
docs/features/: node-expose-research.md
scripts/: socks5-bench.sh
src-tauri/: tauri.conf.json
