[package]
name = "verge-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for managing Clash Verge Rev / mihomo"

[[bin]]
name = "verge-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { workspace = true, features = ["io-util", "net", "process"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "stream"] }
base64 = "0.22"
which = "6"
tar = "0.4"
hyper = "1"
hyper-util = { version = "0.1", features = ["client-legacy", "tokio"] }
http-body-util = "0.1"
tower-service = "0.3"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
anyhow = { workspace = true }
regex = "1"
colored = "3"
dirs = "6"
futures-util = "0.3"
indexmap = { version = "2", features = ["serde"] }
shadowsocks = { version = "1.24", default-features = false, features = ["aead-cipher"] }
socks5-impl = { version = "0.7", features = ["server", "tokio"] }
tokio-util = "0.7"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
